This file documents the revision history for Perl web application Veduta.

{{$NEXT}}

0.01      2016-04-01 08:07:21+02:00 Europe/Berlin

    - initial revision