@@ -101,5 +101,5 @@ Types::Path::Tiny = 0
 [Git::Commit / Commit_Changes] ; commit Changes (for new dev)
 
 [Git::Push]         ; push repo to remote
-; push_to = origin
-; push_to = github
+push_to = origin
+push_to = github
